--- a/src/styles/shop.css
+++ b/src/styles/shop.css
@@ -66,3 +66,38 @@
     justify-content: start;
   }
 }
+
+/* swiper js custom styles */
+
+/* .swiper {
+  overflow-x: hidden;
+  overflow-y: visible;
+} */
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  padding-bottom: 4rem;
+
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-pagination-bullet {
+  width: 20px;
+  height: 20px;
+  text-align: center;
+  line-height: 20px;
+  font-size: 12px;
+  color: #000;
+  opacity: 1;
+  background: rgba(0, 0, 0, 0.2);
+}
+
+.swiper-pagination-bullet-active {
+  color: #fff;
+  background: #D99904;
+}
