--- a/src/styles/categories.css
+++ b/src/styles/categories.css
@@ -1,22 +1,21 @@
-.swiper {
-  width: 100%;
-  height: 100%;
-}
-
-.swiper-slide {
+.category-swiper .swiper-slide {
   text-align: center;
   font-size: 18px;
   background: #fff;
-
-  /* Center slide text vertically */
   display: flex;
   justify-content: center;
   align-items: end;
+  padding-bottom: 3rem;
 }
 
-.swiper-slide img {
+.category-swiper .swiper-slide img {
   display: block;
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.category-swiper .swiper-pagination-bullet{
+  width: 0.75rem;
+  height: 0.75rem;
 }
